cmake_minimum_required(VERSION 3.31)
project(ss_3 C)

set(CMAKE_C_STANDARD 23)

add_executable(ss_3 main.c
        PTIT_CNTT3_IT201_Session03_Bai01.c
        PTIT_CNTT3_IT201_Session03_Bai03.c
        PTIT_CNTT3_IT201_Session03_Bai02.c
        PTIT_CNTT3_IT201_Session03_Bai04.c
        PTIT_CNTT3_IT201_Session03_Bai05.c
        PTIT_CNTT3_IT201_Session03_Bai06.c
        PTIT_CNTT3_IT201_Session03_Bai07.c
)
